.golden/7720657481595756207/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:30:
  |
7 | main = [f|{truncate number:.3x}|]
  |                              ^
Type incompatible with precision (.3), use any of {'e', 'E', 'f', 'F', 'g', 'G', 'n', 's', '%'} or remove the precision field.

    • In the quasi-quotation: [f|{truncate number:.3x}|]
  |
7 | main = [f|{truncate number:.3x}|]
  |           ^^^^^^^^^^^^^^^^^^^^^^^
